# TDEM

./: CMakeLists.txt  Makefile  README.md  compare.txt  config.txt  main_TDEM  out_epinions_wc_10.txt  out_epinions_wc_20.txt  out_epinions_wc_50.txt  out_flixster_wc_10.txt  out_flixster_wc_20.txt  out_flixster_wc_50.txt  out_graph2_20.txt  run.slrm  slurm-52443688.out
data/: flixster_plain.txt
example_input/: graph.txt  graph2.txt  leanings_items.txt  leanings_nodes.txt
output/: assignment_tdem.txt  compare.txt_combinedresults.txt  compare.txt_compareGiven.txt  compare.txt_degreeVersionOne.txt  compare.txt_degreeVersionTwo.txt  compare.txt_tdem.txt  nodeExpLevels_degreeVersionOne.txt  nodeExpLevels_degreeVersionTwo.txt  nodeExpLevels_tdem.txt  out_graph2_20.txt_combinedresults.txt  out_graph2_20.txt_compareGiven.txt  out_graph2_20.txt_degreeVersionOne.txt  out_graph2_20.txt_degreeVersionTwo.txt  out_graph2_20.txt_tdem.txt  pairReachProbs_tdem.txt
src_TDEM/: allocator.cc  allocator.h  allocator_backup.cpp  anyoption.cc  itemGraph.cc  itemGraph.h  main.cc  utils.cc  utils.h
temp/: tmp_11225.txt  tmp_12061.txt  tmp_12631.txt  tmp_13629.txt  tmp_1573.txt  tmp_16449.txt  tmp_16874.txt  tmp_17211.txt  tmp_19227.txt  tmp_19593.txt  tmp_19794.txt  tmp_19973.txt  tmp_2090.txt  tmp_25157.txt  tmp_27731.txt  tmp_28849.txt  tmp_29887.txt  tmp_30874.txt  tmp_31628.txt  tmp_31636.txt  tmp_31985.txt  tmp_31990.txt  tmp_32321.txt  tmp_3254.txt  tmp_3929.txt  tmp_4512.txt  tmp_5431.txt  tmp_55670.txt  tmp_56997.txt  tmp_5805.txt  tmp_5879.txt  tmp_6567.txt  tmp_7036.txt  (+1 more)
